# Dingding_ChatBox

./: README.md
chatbox/: .env  .gitignore  config.py  main.py  pyproject.toml
chatbox/backend/: __init__.py  app.py  chatbox.py
chatbox/frontend/: index.html
chatbox/mcp_client/: client.py
chatbox/mcp_server/: mcp_config.json  server.py
chatbox/mcp_server/data/: person_profile.json
chatbox/mcp_server/data/person_profile/: sample_profiles.json
